Bug 1506073 - URL in Headers panel is wrapping now. r=Honza
UltraBlame original commit: bbe0fe93abc15eb745d7870dc57875d9773f9359

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
@@ -994,9 +994,43 @@ summary
 -
 container
 {
+flex
+-
+wrap
+:
+wrap
+;
 padding
 :
 1px
+;
+padding
+-
+inline
+-
+start
+:
+4px
+;
+}
+.
+network
+-
+monitor
+.
+tabpanel
+-
+summary
+-
+labelvalue
+{
+white
+-
+space
+:
+pre
+-
+wrap
 ;
 }
 .
@@ -1015,14 +1049,6 @@ display
 inline
 -
 block
-;
-padding
--
-inline
--
-start
-:
-4px
 ;
 padding
 -
